# brand-loom

./: .gitignore  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HOSTED.md  LICENSE  Makefile  README.md  SCOPE.md  marketplace.json  pyproject.toml  skills.sh.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
examples/: agent_chain.py  before_after_demo.py  quickstart.py  sample_brand_context.json  with_openai.py
mcp/linkedin/: README.md  __init__.py  server.py
scripts/: eval_parity.py  gen_skill_wrappers.py
skills/bilingual/: SKILL.md
skills/caption/: SKILL.md
skills/cta/: SKILL.md
skills/faq/: SKILL.md
skills/hashtags/: SKILL.md
skills/hook/: SKILL.md
skills/linkedin-comment-drafter/: SKILL.md
skills/linkedin-hook-generator/: SKILL.md
skills/linkedin-post/: SKILL.md
skills/linkedin-post-scorer/: SKILL.md
skills/linkedin-profile-analyzer/: SKILL.md
skills/linkedin-refresh-writer/: SKILL.md
skills/repurpose/: SKILL.md
skills/schema-org/: SKILL.md
skills/seo-outline/: SKILL.md
src/brand_loom/: __init__.py  agent.py  brand.py  cli.py  selfcheck.py
tests/: test_agent.py  test_bilingual.py  test_brand.py  test_caption.py  test_cli.py  test_cta.py  test_demo.py  test_faq.py  test_framework.py  test_hashtags.py  test_hook.py  test_linkedin_post.py  test_parity.py  test_parsing.py  test_providers.py  test_real_providers.py  test_repurpose.py  test_scaffold.py  test_schema_org.py  test_selfcheck.py  test_seo_outline.py
(+48 files in other folders)
